Updated to support PHP 7.0+ only

--- a/composer.json
+++ b/composer.json
@@ -1,36 +1,44 @@
 {
-    "name": "rvalitov/mailslurp-php",
-    "description": "",
-    "keywords": [
-        "swagger",
-        "php",
-        "sdk",
-        "api"
-    ],
-    "homepage": "http://swagger.io",
-    "license": "proprietary",
-    "authors": [
-        {
-            "name": "Swagger and contributors",
-            "homepage": "https://github.com/swagger-api/swagger-codegen"
-        }
-    ],
-    "require": {
-        "php": ">=5.5",
-        "ext-curl": "*",
-        "ext-json": "*",
-        "ext-mbstring": "*",
-        "guzzlehttp/guzzle": "^6.2"
+  "name": "rvalitov/mailslurp-php",
+  "description": "MailSlurp PHP SDK",
+  "keywords": [
+    "mailslurp",
+    "php",
+    "sdk",
+    "api"
+  ],
+  "homepage": "https://github.com/rvalitov/mailslurp-php",
+  "license": "GPL-3.0-only",
+  "authors": [
+    {
+      "name": "Ramil Valitov",
+      "role": "Developer",
+      "email": "ramilvalitov@gmail.com",
+      "homepage": "https://github.com/rvalitov"
     },
-    "require-dev": {
-        "phpunit/phpunit": "^4.8",
-        "squizlabs/php_codesniffer": "~2.6",
-        "friendsofphp/php-cs-fixer": "~1.12"
-    },
-    "autoload": {
-        "psr-4": { "Swagger\\Client\\" : "lib/" }
-    },
-    "autoload-dev": {
-        "psr-4": { "Swagger\\Client\\" : "test/" }
+    {
+      "name": "Swagger and contributors",
+      "homepage": "https://github.com/swagger-api/swagger-codegen"
     }
+  ],
+  "require": {
+    "php": ">=7.0",
+    "ext-curl": "*",
+    "ext-json": "*",
+    "ext-mbstring": "*",
+    "guzzlehttp/guzzle": "^6.2"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^6"
+  },
+  "autoload": {
+    "psr-4": {
+      "Swagger\\Client\\": "lib/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Swagger\\Client\\": "test/"
+    }
+  }
 }
